# AITuber

./: Dockerfile  Makefile  README.md  pyproject.toml
src/: config.py  openai_adopter.py
