[tool.poetry]
name = "aituber-api"
version = "0.1.0"
description = "AITuber API repository"
authors = ["yusuke <ritchie.deep.purple@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
pandas = "^2.1.4"
scikit-learn = "^1.3.2"
openai = "0.28.0"
black = "^23.12.1"
mypy = "^1.8.0"
flake8 = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
